<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->        
    <string name="app_name">Ships</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=net.videgro.ships</string>
    <string name="app_market_url">market://details?id=net.videgro.ships</string>
    
    <string name="url_mmsi_info">http://www.marinetraffic.com/en/ais/details/ships/mmsi:PLACEHOLDER_MMSI</string>
    
    <string name="opendevice_intent_filter_schema">opendevice</string>
    <string name="action_settings">Settings</string>
       
    <!-- Pages -->
    <string name="page_show_map">Show map</string>
    
    <!-- Sharing -->
    <string name="share_subject">I would like to share this ships map with you.</string>
    <string name="share_text">Shared via:</string>
    <string name="share_action_text">Share</string>

    <!-- Buttons -->
	<string name="toggle_turn_on_calibrating_normal">START (dense traffic)</string>
	<string name="toggle_turn_off_calibrating_normal">STOP (dense traffic)</string>

	<string name="toggle_turn_on_calibrating_thorough">START (calm traffic)</string>
	<string name="toggle_turn_off_calibrating_thorough">STOP (calm traffic)</string>
    
	<string name="toggle_turn_on_ais">START</string>
	<string name="toggle_turn_off_ais">STOP</string>
		
	<!--- Popups -->
	<string name="popup_found_ppm_title">Found PPM</string>
	<string name="popup_found_ppm_message">The PPM has been stored in the settings. The PPM which was found for your device is:</string>
	
	<string name="popup_not_found_ppm_title">No valid PPM found</string>
	<string name="popup_not_found_ppm_message">Not possible to automatically determine PPM. Are there ships in your area? Try it again or manually enter the PPM into the Settings.</string>
	
	<string name="popup_other_rtlsdr_device_title">Other RTL-SDR device</string>
	<string name="popup_other_rtlsdr_device_message">To use another RTL-SDR device, the application will stop now. Start it again and make sure to enter the device specific PPM for the device.</string>

	<string name="popup_start_device_failed_title">Failed to start RTL-SDR device</string>
	<string name="popup_start_device_failed_message">Reason:</string>

    <string name="popup_no_ppm_set_title">No PPM value</string>
    <string name="popup_no_ppm_set_message"><![CDATA[Now you have two options:<br/>- Enter the known PPM value of your RTL-SDR device in the Settings or<br/>- Let this app try to find it for you.<br/>For the latter you need to be in an area with (multiple) ships.]]></string>
		
	<string name="popup_calibration_cancelled_title">Calibration cancelled</string>
	<string name="popup_calibration_cancelled_message">Cancelled calibration of RTL-SDR device. Will stop application now.</string>
	
	<string name="popup_are_you_sure_title">Are you sure?</string>
	<string name="popup_are_you_sure_yes">Yes</string>
	<string name="popup_are_you_sure_no">No</string>
	
	<!-- Status -->
	<string name="connect_usb_device_status_ok">USB device is open.</string>
	<string name="connect_usb_device_status_pending_permission_request">No permission to open device, while requesting permission - Not possible to run this application without the right permissions. Sorry!</string>
	<string name="connect_usb_device_status_error_no_device_found">Not possible to connect to device. Is the device physically connected? Please insert RTL-SDR device before starting. Application will stop now.</string>
	<string name="connect_usb_device_status_error_permission_denied">Permission denied to open device - Not possible to run this application without the right permissions. Sorry!</string>
	<string name="connect_usb_device_status_error_unknown">Unknown error while opening USB device.</string>
	
	<string name="connect_usb_device_status_error_stop">Error occurred while stopping RTL-SDR device. Stopped already?"</string>
	<string name="connect_usb_device_status_error_running_already">RTL-SDR is running already. Must stop before started again.</string>
	
	<string name="connect_usb_device_status_change_ppm_ok">Changed PPM.</string>
	<string name="connect_usb_device_status_change_ppm_failed">Failed to change PPM.</string>
	
	<string name="connect_usb_device_status_started">RTL-SDR device started.</string>
	<string name="connect_usb_device_status_stopped">RTL-SDR device stopped.</string>
	
	<!-- Preferences -->
	<string name="pref_GeneralSettings">General</string>
	<string name="pref_loggingVerbose">pref_loggingVerbose</string>
  	<string name="pref_loggingVerbose_summary">Be verbose in displaying logging messages in the status bar.</string>
  	<string name="pref_loggingVerbose_title">Verbose logging</string>
  	<string name="pref_MapSettings_title">Map</string>
  	<string name="pref_mapZoomToExtend">pref_mapZoomToExtend</string>
  	<string name="pref_mapZoomToExtend_summary">On every update of a ship position, zoom the map so it will display all ships.</string>
  	<string name="pref_mapZoomToExtend_title">Zoom to extend</string>
  	<string name="pref_mapFetchAllZoomLevels">pref_mapFetchAllZoomLevels</string>
  	<string name="pref_mapFetchAllZoomLevels_summary">Pre fetch map tiles for all zoomlevels. Will speed up zooming in and out, but will download more data and uses more disk storage.</string>
  	<string name="pref_mapFetchAllZoomLevels_title">Fetch all zoomlevels</string>
  	<string name="pref_mapCacheMaxDiskUsage">pref_mapCacheMaxDiskUsage</string>
  	<string name="pref_mapCacheMaxDiskUsage_default">5</string>
  	<string name="pref_mapCacheMaxDiskUsage_dialog_title">Tiles cache: Maximum disk usage. (MB)</string>
  	<string name="pref_mapCacheMaxDiskUsage_summary">Maximal disk storage used by the caching tiles server.</string>
  	<string name="pref_mapCacheMaxDiskUsage_title">Tiles cache: Maximum disk usage.</string>
  	<string name="pref_AisReceiverSettings_title">AIS Receiver</string>
  	<string name="pref_aisMessagesDestinationHost">pref_aisMessagesDestinationHost</string>
  	<string name="pref_aisMessagesDestinationHost_default">127.0.0.1</string>
  	<string name="pref_aisMessagesDestinationHost_dialog_title">AIS messages destination host, default: 127.0.0.1 (IP address)</string>
  	<string name="pref_aisMessagesDestinationHost_summary">Expert setting:  The IP address to send received AIS messages to. Will always use UDP, port 10110.</string>
  	<string name="pref_aisMessagesDestinationHost_title">AIS Messages destination host</string>
	
	<!--
    <string name="pref_rtlSdrForceRoot">pref_forceRoot</string>
    <string name="pref_rtlSdrForceRoot_summary">Force root to access RTL-SDR device.</string>
	<string name="pref_rtlSdrForceRoot_title">RTL-SDR: Force Root</string>
	-->
			
	<string name="pref_rtlSdrPpm">pref_rtlSdrPpm</string>
    <string name="pref_rtlSdrPpm_default">99999</string>
    <string name="pref_rtlSdrPpm_dialog_title">The RTL-SDR parts per million offset.</string>
    <string name="pref_rtlSdrPpm_summary">Use the calibrate feature to determine this automatically or set this value manually.</string> 
    <string name="pref_rtlSdrPpm_title">RTL-SDR: PPM</string>
    
    <string name="pref_rtlSdrPpmInvalidate">pref_rtlSdrPpmInvalidate</string>
    <string name="pref_rtlSdrPpmInvalidate_summary">Invalidate the current PPM setting.</string>
    <string name="pref_rtlSdrPpmInvalidate_title">Use other RTL-SDR device</string>
  
    <string name="title_fragment_map">Map</string>
    <string name="title_fragment_calibrate">Calibrate</string>
    
    <string name="title_calibrate">Calibrate RTL-SDR device</string>
    <string name="description_calibrate">Each RTL-SDR has it\'s unique parts per million offset (PPM). Use this utility to find the PPM for your device or set it directly using the settings of this application. Typical values PPM are between -100 and +100. Average calibration time is between 5 and 10 minutes. Please be patient.</string>
    <string name="msg_gps_not_enabled">GPS is not enabled. Enable GPS to view your current position at the map.</string>
    
    <string name="alt_rtlsdrStick">RTL-SDR device</string>
</resources>
