<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <net.videgro.ships.preferences.PromoPreferenceRateMe android:key="rate" />

    <PreferenceCategory android:key="@string/pref_GeneralSettings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_loggingVerbose"
            android:summary="@string/pref_loggingVerbose_summary"
            android:title="@string/pref_loggingVerbose_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_MapSettings_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_mapZoomToExtend"
            android:summary="@string/pref_mapZoomToExtend_summary"
            android:title="@string/pref_mapZoomToExtend_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_mapFetchLowerZoomLevels"
            android:summary="@string/pref_mapFetchLowerZoomLevels_summary"
            android:title="@string/pref_mapFetchLowerZoomLevels_title" />
        <EditTextPreference
            android:defaultValue="@string/pref_mapCacheMaxDiskUsage_default"
            android:dialogTitle="@string/pref_mapCacheMaxDiskUsage_dialog_title"
            android:inputType="number"
            android:key="@string/pref_mapCacheMaxDiskUsage"
            android:summary="@string/pref_mapCacheMaxDiskUsage_summary"
            android:title="@string/pref_mapCacheMaxDiskUsage_title" />  
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_AisReceiverSettings_title" >
        <!-- 
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_rtlSdrForceRoot"
            android:summary="@string/pref_rtlSdrForceRoot_summary"
            android:title="@string/pref_rtlSdrForceRoot_title" />
		-->
        <EditTextPreference
            android:defaultValue="@string/pref_rtlSdrPpm_default"
            android:dialogTitle="@string/pref_rtlSdrPpm_dialog_title"
            android:inputType="numberSigned"
            android:key="@string/pref_rtlSdrPpm"
            android:summary="@string/pref_rtlSdrPpm_summary"
            android:title="@string/pref_rtlSdrPpm_title" />
        <Preference android:title="@string/pref_rtlSdrPpmInvalidate_title"
            android:key="@string/pref_rtlSdrPpmInvalidate"
            android:summary="@string/pref_rtlSdrPpmInvalidate_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_ThirdPartyPlotter_title">
        <Preference android:summary="@string/pref_ThirdPartyPlotter_summary" />
        <EditTextPreference
            inputType="phone"
            android:defaultValue="@string/pref_aisMessagesDestinationHost_default"
            android:dialogTitle="@string/pref_aisMessagesDestinationHost_dialog_title"
            android:key="@string/pref_aisMessagesDestinationHost"
            android:summary="@string/pref_aisMessagesDestinationHost_summary"
            android:title="@string/pref_aisMessagesDestinationHost_title" />
        <EditTextPreference
            android:defaultValue="@string/pref_aisMessagesDestinationPort_default"
            android:dialogTitle="@string/pref_aisMessagesDestinationPort_dialog_title"
            android:inputType="number"
            android:key="@string/pref_aisMessagesDestinationPort"
            android:summary="@string/pref_aisMessagesDestinationPort_summary"
            android:title="@string/pref_aisMessagesDestinationPort_title" />
    </PreferenceCategory>  

    <net.videgro.ships.preferences.PromoPreferenceRateMe android:key="rate" />
</PreferenceScreen>